trying to implement search bar

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div id="navigation" class="navbar-menu">
-
         <div class="navbar-start">
-
           <div class="navbar-item has-dropdown is-hoverable">
             <a class="navbar-link">
               Menu
@@ -43,16 +41,18 @@
               </a>
             </div>
           </div>
-
           <a class="navbar-item">
             Section1
           </a>
-
           <a class="navbar-item">
             Section2
           </a>
+          <form id="searchform">
+            <input id="input" type="text"  placeholder="📷"></input>
+            <input id="search" type="submit" value="Search"></input>
+          </form>
+          </a>
         </div>
-
         <div class="navbar-end">
           <div class="navbar-item">
             <button id="showModal" class="button is-primary is-large modal-button" data-target="modal-ter" aria-haspopup="true">Launch card modal</button>
