fix column layout and modal button behaviour

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="frontend.js"></script>
     <script defer src="client.js"></script>
   </head>
@@ -127,22 +128,18 @@
       <div class="columns is-multiline results">
         <!-- results is a custom secondary class -->
         <!-- we append the new elements HERE -->
-        <div class="column is-half">
-          First
-        </div>
       </div>
     </main>
 
 
-    <footer class="footer">
+    <footer class="footer page-footer">
       <div class="content has-text-centered">
         <p>
           <strong>PageName</strong> by Team name. Copyrights?
         </p>
-        <br>
         <p>
-          Find out more at:<br>
-          <a href="#" class="fa fa-facebook"></a><br>
+          Find out more at:
+          <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-linkedin"></a>
         </p>
       </div>
