fix cancel button functionality

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </section>
           <footer class="modal-card-foot">
             <button id="submitButton" class="button is-success">Submit</button>
-            <button class="button">Cancel</button>
+            <button class="button close-modal">Cancel</button>
           </footer>
         </div>
       </div>
