--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <!-- should LIMIT to only accept images and no other file types -->
               <br>
               <br>
-              <textarea class="textarea" maxlength = "300" placeholder="Enter Text" rows="10" id="caption" name="caption" "></textarea>
+              <textarea class="textarea" maxlength = "300" placeholder="Enter Text" rows="10" id="caption" name="caption"></textarea>
               <!-- 300 word limit set here -->
 
 
@@ -143,7 +143,6 @@
         </p>
       </div>
     </footer>
-
 
   </body>
 </html>
