--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
               <label for="userfile">Choose file:</label>
               <input type="file" id="userfile" name="userfile">
               <!-- should LIMIT to only accept images and no other file types -->
+              <label for="gifentry">Giphy URL:</label>
+              <input type="text" id="gifentry" name="gifentry">
               <br>
               <br>
               <textarea class="textarea" maxlength = "300" placeholder="Enter Text" rows="10" id="caption" name="caption"></textarea>
