--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BlogService</title>
+    <title>BlogName</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="output.css">
-    <link rel="stylesheet" href="style.css">
     <script defer src="client.js"></script>
     <script defer src="frontend.js"></script>
   </head>
   <body>
-
-
+​
+​
     <header>
       <h1 id="header" class="title is-1">BlogName</h1>
     </header>
-
-
+​
+​
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div id="navigation" class="navbar-menu">
         <div class="navbar-start">
@@ -48,21 +48,20 @@
           <a class="navbar-item">
             Section2
           </a>
-          <form id="searchform">
-            <input id="input" type="text"  placeholder="📷"></input>
-            <input id="search" type="submit" value="Search"></input>
-          </form>
-          </a>
         </div>
+
+        <input type="text" class="input" id="myInput" onkeyup="myFunction()" placeholder="📷">
+​
         <div class="navbar-end">
+          <!-- </form> -->
           <div class="navbar-item">
-            <button id="showModal" class="button is-primary is-large modal-button" data-target="modal-ter" aria-haspopup="true">Launch card modal</button>
+            <button id="showModal" class="button is-primary is-large modal-button" data-target="modal-ter" aria-haspopup="true">New post</button>
           </div>
         </div>
       </div>
     </nav>
-
-
+​
+​
     <main>
       <form id="blogForm">
       <div id="modal-ter" class="modal">
@@ -74,16 +73,16 @@
           </header>
           <section class="modal-card-body">
             <div class="content">
-
-
+​
+​
               <input type="text" id="title" name="title" placeholder="Post title..."/>
-
+​
               <label for="style">Mode:</label>
               <select name="style" id="style">
                 <option value="Digital">Digital</option>
                 <option value="Analog">Analog</option>
-
-
+​
+​
               </select>
               <label for="camera">Camera:</label>
               <select name="Camera type" id="camera">
@@ -99,8 +98,8 @@
                 <option value="150 f/2.5">150 f/2.5</option>
                 <option value="35mm f/1">35mm f/1</option>
               </select>
-
-
+​
+​
               <br>
               <br>
               <label for="userfile">Choose file:</label>
@@ -112,8 +111,8 @@
               <br>
               <textarea class="textarea" maxlength = "300" placeholder="Enter Text" rows="10" id="caption" name="caption"></textarea>
               <!-- 300 word limit set here -->
-
-
+​
+​
             </div>
           </section>
           <footer class="modal-card-foot">
@@ -123,16 +122,16 @@
         </div>
       </div>
       </form>
-
-
-
+​
+​
+​
       <div class="columns is-multiline results">
         <!-- results is a custom secondary class -->
         <!-- we append the new elements HERE -->
       </div>
     </main>
-
-
+​
+​
     <footer class="footer page-footer">
       <div class="content has-text-centered">
         <p>
@@ -145,6 +144,6 @@
         </p>
       </div>
     </footer>
-
+​
   </body>
 </html>
