--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <header>
       <h1 id="pageName">Fotographiq</h1>
+      <p>A community to share and discuss photography!</p>
     </header>
 
     <!-- make extra menu for mobile only  -->
@@ -93,8 +94,7 @@
               <select name="style" id="style">
                 <option value="Digital">Digital</option>
                 <option value="Analog">Analog</option>
-
-
+                <option value="Other">Other</option>
               </select>
               <label for="camera">Camera:</label>
               <select name="Camera type" id="camera">
@@ -102,6 +102,7 @@
                 <option value="Nikon">Nikon</option>
                 <option value="Sony">Sony</option>
                 <option value="Leica">Leica</option>
+                <option value="Other">Other</option>
               </select>
               <label for="lens">Lens:</label>
               <select name="Lens type" id="lens">
@@ -109,6 +110,7 @@
                 <option value="210 f/3">210 f/3</option>
                 <option value="150 f/2.5">150 f/2.5</option>
                 <option value="35mm f/1">35mm f/1</option>
+                <option value="Other">Other</option>
               </select>
 
 
@@ -149,13 +151,10 @@
     <footer id="footer" class="footer page-footer">
       <div class="content has-text-centered">
         <p>
-          <strong>PageName</strong> by Team name. Copyrights?
+          <strong>Fotographiq</strong> by <a href="#">Angus</a>, <a href="#">Despoina</a>,
+          <a href="#">Hannah</a> and <a href="#">Simon</a>. All rights reserved.
         </p>
-        <p>
-          Find out more at:
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-linkedin"></a>
-        </p>
+
       </div>
     </footer>
 
