--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <title>Fotographiq</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="client/output.css">
     <script defer src="client/client.js"></script>
     <script defer src="client/frontend.js"></script>
+
   </head>
   <body>
 
     <header>
       <h1 id="pageName">Fotographiq</h1>
-      <p>A community to share and discuss photography!</p>
+      <h6 class="subtitle is-6">A community to share and discuss photography!</h6>
     </header>
 
     <!-- make extra menu for mobile only  -->
@@ -26,11 +28,13 @@
         Menu
       </p>
       <ul class="menu-list">
-      <li><a>
-        First
+
+      <li><a href="#">
+        Articles
       </a></li>
-      <li><a>
-        Second
+      <li><a href="#">
+        Inspiration
+
       </a></li>
       <li><a href="#footer">
       Contact us
@@ -46,15 +50,14 @@
               Menu
             </a>
             <div class="navbar-dropdown">
-              <a class="navbar-item">
-                First
+
+              <a href="#" class="navbar-item">
+                Articles
               </a>
-              <a class="navbar-item">
-                Second
+              <a href="#" class="navbar-item">
+                Insppiration
               </a>
-              <a class="navbar-item">
-                Third
-              </a>
+
               <hr class="navbar-divider">
 
               <a class="navbar-item" href="#footer">
@@ -164,8 +167,10 @@
     <footer id="footer" class="footer page-footer">
       <div class="content has-text-centered">
         <p>
-          <strong>Fotographiq</strong> by <a href="#">Angus</a>, <a href="#">Despoina</a>,
-          <a href="#">Hannah</a> and <a href="#">Simon</a>. All rights reserved.
+
+          <strong>Fotographiq</strong> by <a href="https://www.linkedin.com/in/angus-woodman-6a3072151/">Angus</a>, <a href="https://www.linkedin.com/in/despoinasifouna/">Despoina</a>,
+          <a href="https://www.linkedin.com/in/hannahtesfay/">Hannah</a> and <a href="https://www.linkedin.com/in/peyman-simon-hewitt-49640891/">Simon</a>. All rights reserved.
+
         </p>
 
       </div>
